--- a/Rankalicious/Rankalicious/Web.config
+++ b/Rankalicious/Rankalicious/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Rankalicious-20141002101203.mdf;Initial Catalog=aspnet-Rankalicious-20141002101203;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="ResultsDbContext"
+   connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Results.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
